CartoWeb HEAD
=============

- Fixed multithreads conflicts in throttling plugin.


2008-09-04: CartoWeb 3.5.0
==========================

- Added new "currentuser" pdf block to output current user login name.
- Added new "timeoutBeforeHide" parameter for toolTips timeout value.
- No more forced "folder" id by plugin! now use 'folderId' parameter in .ini (doc 4.4.3)(bug 1814).
- Added parameters for general encoding of data sources and specific encoding by layers (EncoderClass.data, data_encoding) (doc 16.3).
- Added input definition parameter in edit plugin metadata definition and support for input type "hidden" and "textarea" (edit_rendering) (doc 14.2.1).
- Fixed: toolTips now respect min/max scale of related layers.
- Added circle drawing tool in outline plugin
- Extended support of outline GET parameters to enable description of several shapes - possibly of different types - at once
- Extended support of query GET parameters to enable querying of multiple objets - possibly from different layers - at once
- Added exportLinkIt plugin (returns URL of current page state)
- Added layerFilter plugin: generates a layer attributes filter form and applies the resulting filters 
- Added throttling plugin: used to temporary ban ip that have overflowed configurable requests/second rules
- Added support for outputFormat in export plugins, implemented in exportPdf
- Fixed: proper javascript error handling in plugin's Ajax response evaluation
- Added ServerMapquery::queryByMsShape(), useful to perform queries using MapScript ShapeObj objects
- Added statsReports plugin / stats script: generate human readable visual report based on Cartoweb and WMS log
- Added portuguese translations (thanks to K2 Sistemas)
- Added security parameter "security_view" for children switching
- Added config in exportPdf to show/hide some blocks if some layers are activated
- Added displayMeasures parameter in plugin Outline to display area/distance in label