@@ -1,0 +1,14 @@
+AjaxPlugins.Geoloc = {};
+
+/*
+ * Geoloc plugin's Actions
+ */
+ 
+AjaxPlugins.Geoloc.Actions = {};
+
+AjaxPlugins.Geoloc.Actions.DoIt = {
+    buildPostRequest: function(argObject) {
+        return AjaxHandler.buildPostRequest();
+    }  
+};
+
