@@ -1,0 +1,6 @@
+// main geoloc tool declaration, properties and methodes
+Map.prototype.geoloc = function(aDisplay) {
+  this.selectionPoint(aDisplay, 'Geoloc.DoIt');
+};
+
+
